fixed timer nav buttons on smaller screen sizes

--- a/src/styles/Clock.module.css
+++ b/src/styles/Clock.module.css
@@ -11,3 +11,9 @@
 .clock span {
   color: var(--clr-accent-400);
 }
+
+@media (width< 380px) {
+  .clock {
+    font-size: 6rem;
+  }
+}
